@@ -45,3 +45,4 @@ setClass("ScanBcfParam",
 .BamFile <- setRefClass("BamFile", contains="RsamtoolsFile")
 .BcfFile <- setRefClass("BcfFile", contains="RsamtoolsFile",
    fields=list(mode="character"))
+.FaFile <- setRefClass("FaFile", contains="RsamtoolsFile")
